# mesabite

./: .gitignore  README.md
backend/: pyproject.toml
backend/src/: manage.py  testdata.json
backend/src/categories/: admin.py  models.py  serializers.py  views.py
backend/src/categories/migrations/: 0001_initial.py  0002_category_folder.py  0003_alter_category_image.py
backend/src/folders/: admin.py  models.py  serializers.py  views.py
backend/src/folders/migrations/: 0001_initial.py  0002_alter_folder_image.py
backend/src/menu_items/: admin.py  models.py  serializers.py  views.py
backend/src/menu_items/migrations/: 0001_initial.py
backend/src/mesabite/: asgi.py  routers.py  settings.py  urls.py  wsgi.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Button.tsx  Field.tsx  Header.tsx  Icon.tsx  Loader.tsx  OmniSearch.tsx  Page.tsx  PageTitle.tsx  Paginator.tsx  Search.tsx
frontend/src/features/categories/api/: addCategory.ts  deleteCategory.ts  editCategory.ts  getCategories.ts  getCategory.ts
frontend/src/features/categories/components/: CategoryForm.tsx  CategoryList.tsx  CategoryListItem.tsx
frontend/src/features/categories/routes/: CategoryAddPage.tsx  CategoryEditPage.tsx
frontend/src/features/categories/types/: index.ts
frontend/src/features/folders/api/: addFolder.ts  deleteFolder.ts  editFolder.ts  getFolder.ts  getFolders.ts
frontend/src/lib/: axios.ts  react-query.ts
frontend/src/providers/: app.tsx
frontend/src/routes/: index.tsx
(+8 files in other folders)
